Omnibox UI: Don't elide "m" subdomains on Desktop.

Eliding the "m" subdomain on Desktop can be confusing, since users
would generally want to know if they are unintentionally on the mobile
site on Desktop.

After this CL, we only elide the "m" subdomain on Android and iOS.

Bug: 875669
Change-Id: Ifededfce720444e5c9e85ffc97c92c8cee530937
Reviewed-on: https://chromium-review.googlesource.com/1185904
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586416}
Former-commit-id: ed2c4514bdbd17ee1e65bfefd150510a079c71ea