chrome/browser/ui/toolbar/toolbar_model_unittest.cc
@@ -11,6 +11,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/macros.h"
 #include "base/strings/string_util.h"
 #include "base/strings/utf_string_conversions.h"
+#include "build/build_config.h"
 #include "chrome/browser/autocomplete/autocomplete_classifier_factory.h"
 #include "chrome/browser/ui/browser.h"
 #include "chrome/browser/ui/tabs/tab_strip_model.h"
@@ -70,11 +71,20 @@ struct TestItem {
         "www.google.com/search?q=tractor+supply",
         "google.com/search?q=tractor+supply",
     },
+#if defined(OS_ANDROID)
     {
         GURL("https://m.google.ca/search?q=tractor+supply"),
         "https://m.google.ca/search?q=tractor+supply",
         "google.ca/search?q=tractor+supply",
     },
+#else  // !defined(OS_ANDROID)
+    // 'm' is not elided on Desktop.
+    {
+        GURL("https://m.google.ca/search?q=tractor+supply"),
+        "https://m.google.ca/search?q=tractor+supply",
+        "m.google.ca/search?q=tractor+supply",
+    },
+#endif
 };
 
 }  // namespace
