components/url_formatter/url_formatter_unittest.cc
@@ -14,6 +14,7 @@
 #include "base/strings/string_piece.h"
 #include "base/strings/stringprintf.h"
 #include "base/strings/utf_string_conversions.h"
+#include "build/build_config.h"
 #include "components/url_formatter/idn_spoof_checker.h"
 #include "testing/gtest/include/gtest/gtest.h"
 #include "url/gurl.h"
@@ -1018,6 +1019,7 @@ TEST(UrlFormatterTest, IDNToUnicode) {
 
 TEST(UrlFormatterTest, FormatUrl) {
   FormatUrlTypes default_format_type = kFormatUrlOmitUsernamePassword;
+  // clang-format off
   const UrlTestData tests[] = {
       {"Empty URL", "", default_format_type, net::UnescapeRule::NORMAL, L"", 0},
 
@@ -1220,29 +1222,32 @@ TEST(UrlFormatterTest, FormatUrl) {
        net::UnescapeRule::NORMAL, L"https://ftp.google.com/", 8},
 
       // -------- omit trivial subdomains --------
-      {"omit trivial subdomains - trim www", "http://www.google.com/",
-       kFormatUrlOmitTrivialSubdomains, net::UnescapeRule::NORMAL,
-       L"http://google.com/", 7},
+#if defined(OS_ANDROID) || defined(OS_IOS)
       {"omit trivial subdomains - trim m", "http://m.google.com/",
-       kFormatUrlOmitTrivialSubdomains, net::UnescapeRule::NORMAL,
-       L"http://google.com/", 7},
+      kFormatUrlOmitTrivialSubdomains, net::UnescapeRule::NORMAL,
+      L"http://google.com/", 7},
       {"omit trivial subdomains - trim m and www", "http://m.www.google.com/",
-       kFormatUrlOmitTrivialSubdomains, net::UnescapeRule::NORMAL,
-       L"http://google.com/", 7},
+      kFormatUrlOmitTrivialSubdomains, net::UnescapeRule::NORMAL,
+      L"http://google.com/", 7},
       {"omit trivial subdomains - trim m from middle",
-       "http://en.m.wikipedia.org/", kFormatUrlOmitTrivialSubdomains,
-       net::UnescapeRule::NORMAL, L"http://en.wikipedia.org/", 7},
-      {"omit trivial subdomains - exclude private registries",
-       "http://www.blogspot.com/", kFormatUrlOmitTrivialSubdomains,
-       net::UnescapeRule::NORMAL, L"http://blogspot.com/", 7},
-      {"omit trivial subdomains - don't do blind substring matches for www",
-       "http://wwww.google.com/", kFormatUrlOmitTrivialSubdomains,
-       net::UnescapeRule::NORMAL, L"http://wwww.google.com/", 7},
+      "http://en.m.wikipedia.org/", kFormatUrlOmitTrivialSubdomains,
+      net::UnescapeRule::NORMAL, L"http://en.wikipedia.org/", 7},
+#else  // !(defined(OS_ANDROID) || defined(OS_IOS))
+      {"omit trivial subdomains - don't trim m on desktop",
+      "http://m.google.com/", kFormatUrlOmitTrivialSubdomains,
+      net::UnescapeRule::NORMAL, L"http://m.google.com/", 7},
+      {"omit trivial subdomains - trim www but leave m on desktop",
+      "http://m.www.google.com/", kFormatUrlOmitTrivialSubdomains,
+      net::UnescapeRule::NORMAL, L"http://m.google.com/", 7},
+      {"omit trivial subdomains - don't trim m from middle on desktop",
+      "http://en.m.wikipedia.org/", kFormatUrlOmitTrivialSubdomains,
+      net::UnescapeRule::NORMAL, L"http://en.m.wikipedia.org/", 7},
+#endif
       {"omit trivial subdomains - don't do blind substring matches for m",
        "http://foom.google.com/", kFormatUrlOmitTrivialSubdomains,
        net::UnescapeRule::NORMAL, L"http://foom.google.com/", 7},
       {"omit trivial subdomains - don't crash on multiple delimiters",
-       "http://www...m..foobar...google.com/", kFormatUrlOmitTrivialSubdomains,
+       "http://www....foobar...google.com/", kFormatUrlOmitTrivialSubdomains,
        net::UnescapeRule::NORMAL, L"http://...foobar...google.com/", 7},
 
       {"omit trivial subdomains - sanity check for ordinary subdomains",
@@ -1255,7 +1260,7 @@ TEST(UrlFormatterTest, FormatUrl) {
        "http://google.com/www.m.foobar", kFormatUrlOmitTrivialSubdomains,
        net::UnescapeRule::NORMAL, L"http://google.com/www.m.foobar", 7},
       {"omit trivial subdomains - sanity check for IDN",
-       "http://www.xn--cy2a840a.m.xn--cy2a840a.com",
+       "http://www.xn--cy2a840a.www.xn--cy2a840a.com",
        kFormatUrlOmitTrivialSubdomains, net::UnescapeRule::NORMAL,
        L"http://\x89c6\x9891.\x89c6\x9891.com/", 7},
 
@@ -1316,6 +1321,7 @@ TEST(UrlFormatterTest, FormatUrl) {
        kFormatUrlOmitDefaults | kFormatUrlTrimAfterHost,
        net::UnescapeRule::NORMAL, L"google.com", 0},
   };
+  // clang-format on
 
   for (size_t i = 0; i < arraysize(tests); ++i) {
     size_t prefix_len;
@@ -1728,18 +1734,27 @@ TEST(UrlFormatterTest, FormatUrlWithOffsets) {
                        net::UnescapeRule::NORMAL, omit_https_with_auth_offsets);
 
   const size_t strip_trivial_subdomains_offsets_1[] = {
-      0, 1, 2,  3,  4,  5,  6,  7,  kNpos, kNpos, kNpos, 7,  kNpos, 7,
-      8, 9, 10, 11, 12, 13, 14, 15, 16,    17,    18,    19, 20,    21};
+      0, 1,  2,  3,  4,  5,  6,  7,  kNpos, kNpos, kNpos, 7,  8,
+      9, 10, 11, 12, 13, 14, 15, 16, 17,    18,    19,    20, 21};
   CheckAdjustedOffsets(
-      "http://www.m.google.com/foo/", kFormatUrlOmitTrivialSubdomains,
+      "http://www.google.com/foo/", kFormatUrlOmitTrivialSubdomains,
       net::UnescapeRule::NORMAL, strip_trivial_subdomains_offsets_1);
 
+#if defined(OS_ANDROID) || defined(OS_IOS)
   const size_t strip_trivial_subdomains_offsets_2[] = {
       0,  1,     2,     3,     4,  5,  6,  7,  kNpos, 7,  8,  9,
       10, kNpos, kNpos, kNpos, 10, 11, 12, 13, 14,    15, 16, 17};
   CheckAdjustedOffsets(
       "http://m.en.www.foo.com/", kFormatUrlOmitTrivialSubdomains,
       net::UnescapeRule::NORMAL, strip_trivial_subdomains_offsets_2);
+#else  // !(defined(OS_ANDROID) || defined(OS_IOS))
+  const size_t strip_trivial_subdomains_offsets_2[] = {
+      0,  1,     2,     3,     4,  5,  6,  7,  8,  9,  10, 11,
+      12, kNpos, kNpos, kNpos, 12, 13, 14, 15, 16, 17, 18, 19};
+  CheckAdjustedOffsets(
+      "http://m.en.www.foo.com/", kFormatUrlOmitTrivialSubdomains,
+      net::UnescapeRule::NORMAL, strip_trivial_subdomains_offsets_2);
+#endif
 
   const size_t strip_trivial_subdomains_from_idn_offsets[] = {
       0,     1,     2,     3,     4,     5,     6,     7,     kNpos, kNpos,
